repo/viki/deployment/ingress_viki.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: viki-api
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
    certmanager.k8s.io/acme-challenge-type: http01
spec:
  tls:
  - hosts:
    - viki-api.shitangdama.cn
    secretName: viki-api
  rules:
    - host: viki-api.shitangdama.cn
      http:
        paths:
        - path: /
          backend:
            serviceName: viki-service
            servicePort: 80
